--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
     <section class="showcase">
       <img src="./images/bg.jpg" alt="Picture">
       <div class="overlay">
-        <h2 style="font-weight: bolder;" class="overlay-header">LE-NOIR</h2>
+        <h2 style="font-weight: bolder;" class="overlay-header">LE NOIR</h2>
         <p class="overlay-body">
           Web-Entwicklung nach Mass!
         </p>
+        <span>
+          <a href="https://www.linkedin.com/company/102561879/admin/feed/posts/" class="link"><i class="bi bi-linkedin"></i></a>
+          <a href="https://github.com/LE-NOIR-Web-Entwicklung" class="link"><i class="bi bi-github"></i></i></a>
+        </span>
       </div>
     </section>
 
@@ -157,91 +161,8 @@
       </div>
     </section>
 
-    <!-- <div class="content">
-      <h3 class="content-header">DIENSTLEISTUNGEN</h3>
-      <p>
-          Sie wollen Ihre bestehende Webseite überarbeiten oder eine neue Webseite erstellen?
-          <br>
-          Dann sind Sie bei uns an der richtigen Adresse. Egal ob Web-Design, Web-Entwicklung oder Support, 
-          wir sind jederzeit für Sie da und geben unser Bestes, um Ihnen das perfekte Benutzererlebnis zu bieten.
-      </p>
-
-      <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingOne">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="font-weight: bolder;">
-              <i class="bi bi-palette-fill" style="margin-right: 1%;"></i>Web Design
-            </button>
-          </h2>
-          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">
-              <p>
-                Ein Screen- und UX-Designer vereint die verschiedenen Anforderungen und Erkenntnisse: Brand Design, Bildwelt, Content und Erfahrung für eine optimale Nutzerführung. 
-                Basierend auf den Nutzerprofilen und dem erwarteten Nutzerverhalten entstehen Seitenelemente, Navigation und Unterseiten. 
-                Ein klickbarer Prototyp ermöglicht erste Tests und eine Beurteilung der Anmutung.                </p>
-              <button type="button" class="btn btn-dark"><a href="./pages/web-design.html" class="more-link">Mehr erfahren</a></button>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingFour">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseOne" style="font-weight: bolder;">
-              <i class="bi bi-body-text" style="margin-right: 1%;"></i>Web Content
-            </button>
-          </h2>
-          <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">
-              <p>
-                Der Content bestimmt die Struktur und den Umfang der Website. Unter Content verstehen wir alle Text- und Bildinhalte, aber auch Bewegtbilder wie Brand Spots oder SEO-Elemente wie Meta Titles und Meta Descriptions. 
-                Die Qualität und das gelungene Zusammenspiel all dieser Elemente entscheiden maßgeblich über die spätere Sichtbarkeit der 
-                Website - also das Ranking in der Google-Suche.
-              </p>
-              <button type="button" class="btn btn-dark"><a href="./pages/web-content.html" class="more-link">Mehr erfahren</a></button>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="font-weight: bolder;">
-              <i class="bi bi-laptop-fill" style="margin-right: 1%;"></i>Web Entwicklung  
-            </button>
-          </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">
-              <p>
-                Wir machen Ihren Traum wahr!
-                Mit Leidenschaft und Kompetenz zum perfekten Ergebnis
-                Bei Le-Noir Web-Entwicklung ist es unsere Mission, Ihre Visionen und Ideen in die Realität umzusetzen. Wir nehmen uns Zeit, Ihre Bedürfnisse und Wünsche genau zu verstehen und entwickeln gemeinsam mit Ihnen ein Konzept, das perfekt zu Ihnen passt. 
-                Dabei legen wir großen Wert auf eine enge Zusammenarbeit und offene Kommunikation, so dass Sie während des gesamten Projekts stets involviert sind und Ihre Ideen einbringen können.                </p>    
-              <button type="button" class="btn btn-dark"><a href="./pages/web-dev.html" class="more-link">Mehr erfahren</a></button>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="font-weight: bolder;">
-              <i class="bi bi-question-circle-fill" style="margin-right: 1%;"></i>Support  
-            </button>
-          </h2>
-          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">
-              <p>
-                Fragen nach Abschluss des Projekts?
-                <br><br>
-                Wir sind auch nach Fertigstellung Ihrer Webseite für Sie da!
-                <br><br>
-                Bei Le-Noir Web-Entwicklung wissen wir, dass Ihre Webseite auch nach der Fertigstellung des Projekts gepflegt und aktualisiert 
-                werden muss. Daher bieten wir Ihnen umfassenden Support und Wartung, damit Ihre Webseite immer auf dem neuesten Stand bleibt.
-              </p>
-              <button type="button" class="btn btn-dark"><a href="./pages/support.html" class="more-link">Mehr erfahren</a></button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-     --><!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" ></script>
