--- a/pages/web-dev.html
+++ b/pages/web-dev.html
@@ -6,16 +6,21 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
       <link rel="stylesheet" href="./../css/style.css">
-      <title>LE-NOIR</title>
+      <title>LE NOIR</title>
       <link rel="icon" type="image/x-icon" href="./../images/logo.ico">
   </head>
   <header>
-      <nav class="navbar fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="./../index.html">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
+      <a class="navbar-brand" href="./../index.html">
           <img src="./../images/logo.png" width="55" height="55" class="d-inline-block align-center" alt="">
-          <span class="navbar-heading">LE-NOIR</span>
-        </a>  
-        <ul class="nav justify-content-end">
+          <span class="navbar-heading">LE NOIR</span>
+      </a>
+      
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end le-noir-nav" id="navbarToggler">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="./../pages/web-design.html">Web Design</a>
           </li>
@@ -32,13 +37,14 @@
             <a class="nav-link" href="./../pages/about.html">Über uns</a>
           </li>
         </ul>
-      </nav>
+      </div>
+    </nav>
   </header>
   <body>
     <section class="showcase">
       <img src="./../images/bg.jpg" alt="Picture">
       <div class="overlay">
-        <h2 style="font-weight: bolder;" class="overlay-header">LE-NOIR</h2>
+        <h2 style="font-weight: bolder;" class="overlay-header">LE NOIR</h2>
         <p class="overlay-body">
           Web-Entwicklung nach Mass!
         </p>
@@ -123,10 +129,11 @@
         </div>
     </section>
 
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" ></script>
-    <script src="./../js/site.js"></script>
+    <script src="./js/site.js"></script>
   </body>    
 </html>
